c-family: 	PR libstdc++/51365 	* c-common.c (RID_IS_FINAL): Add. 	* c-common.h (RID_IS_FINAL): Add. cp: 	PR libstdc++/51365 	* cp-tree.h (CPTK_IS_FINAL): Add. 	* parser.c (cp_parser_translation_unit): Handle RID_IS_FINAL. 	(cp_parser_primary_expression, cp_parser_trait_expr): Likewise. 	* semantics.c (trait_expr_value, finish_trait_expr): Handle 	CPTK_IS_FINAL. 	* cxx-pretty-print.c (pp_cxx_trait_expression): Likewise. testsuite: 	PR libstdc++/51365 	* g++.dg/ext/is_final.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182360 138bc75d-0d04-0410-961f-82ee72b054a4